<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.mainFragments.EditFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/add_button"
        style="@style/buttonStyle"
        android:text="@string/add"
        android:background="@drawable/button_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/remove_button"
        style="@style/buttonStyle"
        android:background="@drawable/button_style"
        android:text="@string/remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_button" />

    <Button
        android:id="@+id/edit_button"
        style="@style/buttonStyle"
        android:background="@drawable/button_style"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_button" />



</androidx.constraintlayout.widget.ConstraintLayout>