<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.mainFragments.SearchFragment">

    <Button
        android:id="@+id/number_of_car_button"
        style="@style/buttonStyle"
        android:background="@drawable/button_style"
        android:text="@string/find_cars"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ment_button"
        style="@style/buttonStyle"
        android:background="@drawable/button_style"
        android:text="@string/ment_search"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_car_button" />

    <Button
        android:id="@+id/history_car"
        style="@style/buttonStyle"
        android:background="@drawable/button_style"
        android:text="@string/car_history"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ment_button" />


</androidx.constraintlayout.widget.ConstraintLayout>